--- a/project/public/index.html
+++ b/project/public/index.html
@@ -240,7 +240,7 @@ if (
                 <img src="https://pubchem.ncbi.nlm.nih.gov/rest/pug/compound/cid/${data.cid}/PNG">
             </div>
             <div class="rect-card">
-                   <h3 class="section-title"><i class="fas fa-cube"></i> Interactive 3D Model</h3>
+                   <h3 class="section-title"><i class="fas fa-cube"></i> Interactive 3D Model</h3><br><span style="color: grey;">Click "S" to stop turnning</span>
     <div id="mol-3d-viewer" style="width: 100%; height: 100%; position: relative; background: #161e2e;"></div>
             </div>
         </div>
@@ -289,3 +289,4 @@ $(document).on('keydown', function(e) {
 </body>
 
 </html>
+
